using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace E_Learning.Models.Enums
{
    public enum StatutFormation
    {
        Active,
        Inactive,
        Archivee
    }
}
